# hack_2019

./: .gitignore  Makefile.am  README.md  configure.ac  submit.sh
data/: input.nml
gfdl_fyppm/: README  pgi.mk
gfdl_fyppm/exec_v0/: Makefile
gfdl_fyppm/exec_v1/: Makefile
gfdl_fyppm/src/: Makefile.am  fyppm.F90  main.F90
gfdl_fyppm/src.v0/: Main.F90
gfdl_fyppm/src.v1/: Main.F90  fyppm.F90
gfdl_mapz/: README  env.cshrc  pgi.mk
gfdl_mapz/exec.v0/: Makefile
gfdl_mapz/exec.v1/: Makefile
gfdl_mapz/exec.v2/: Makefile
gfdl_mapz/src/: Makefile.am  fv_mapz.F90  main.F90  test.F90
gfdl_mapz/src.v0/: fv_mapz.F90
gfdl_mapz/src.v1/: Main.F90
gfdl_mapz/src.v2/: fv_mapz.F90
gfdl_nh_core/: README  pgi.mk
gfdl_nh_core/exec.v0/: Makefile
gfdl_nh_core/exec.v1/: Makefile
gfdl_nh_core/src/: Makefile.am  main.F90
gfdl_nh_core/src.v0/: Main.F90
gfdl_nh_core/src.v1/: nh_core.F90
