AC_PREREQ([2.59])
AC_INIT([hackathon], [2019-princeton], [])
AC_CANONICAL_HOST
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE([foreign dist-zip subdir-objects])
AC_CONFIG_MACRO_DIR([m4])
LT_PREREQ([2.4])
LT_INIT()
AC_PROG_FC
AC_CONFIG_FILES([Makefile gfdl_fyppm/Makefile gfdl_fyppm/src/Makefile
                 gfdl_mapz/Makefile gfdl_mapz/src/Makefile
                 gfdl_nh_core/Makefile gfdl_nh_core/src/Makefile])
AC_OUTPUT()
